# zcash-toolchain

./: 1000-disable-genchecksum.patch  COPYING  README.md  Vagrantfile  crosstool.config
tmpl/: BUILD  CROSSTOOL  crosstool.bazel
